# russembly

./: Cargo.toml  Makefile  README.md  example.asm  functions.js  syntax.rusm
src/: cpu.rs  lexer.rs  lexer_new.rs  lib.rs  main  main.rs  stack.rs  syntax.rusm  test.rs  testing.rusm
src/cpu/: display.rs  functions.js  getter.rs  jump_location.rs  main.rs  mod.rs  opcodes.rs  run.rs  show.rs  traits.rs
src/test/: main.rs  mod.rs
