[package]
name = "russembly"
version = "0.1.0"
edition = "2021"
description = "Assambly like scripting language in Rust"
repository = "https://github.com/Zockedidock/russembly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
num = "0.4.0"
conv = "0.3.3"
serde = {version = "1.0.145", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
indicatif = "0.17.1"
colored = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"